--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
            data-magic-power="0" data-magic-defense="0" data-movement-speed="40"
            data-physical-penetration="0" data-magic-penetration="0" data-crit-attack="0"
            data-crit-chance="0">
-        <img src="https://static.wikia.nocookie.net/mobile-legends/images/0/07/Swift_Boots.png/revision/latest?cb=20210627055208" alt="Swift Boots">
+        <img src="https://static.wikia.nocookie.net/mobile-legends/images/0/07/Swift_Boots.png" alt="Swift Boots">
         <span>Swift Boots</span>
       </div>
 
