--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
            data-magic-power="0" data-magic-defense="0" data-movement-speed="65"
            data-physical-penetration="0" data-magic-penetration="0" data-crit-attack="0"
            data-crit-chance="0">
-        <img src="https://static.wikia.nocookie.net/mobile-legends/images/a/a4/Rapid_Boots.png/revision/latest?cb=20240110072315" alt="Rapid Boots">
+        <img src="https://static.wikia.nocookie.net/mobile-legends/images/a/a4/Rapid_Boots.png" alt="Rapid Boots">
         <span>Rapid Boots</span>
       </div>
 
