--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                data-magic-power="0" data-magic-defense="0" data-movement-speed="0"
                data-physical-penetration="0" data-magic-penetration="0" data-crit-attack="0"
                data-crit-chance="0">
-            <img src="https://static.wikia.nocookie.net/mobile-legends/images/8/83/Sea_Halberd.png/revision/" alt="Sea Halberd">
+            <img src="https://static.wikia.nocookie.net/mobile-legends/images/8/83/Sea_Halberd.png" alt="Sea Halberd">
             <span>Sea Halberd</span>
           </div>
     
